fix: z-index problems

--- a/examples/nextjs-comments-canvas/src/components/CommentsCanvas.module.css
+++ b/examples/nextjs-comments-canvas/src/components/CommentsCanvas.module.css
@@ -5,6 +5,10 @@
   overflow: hidden;
 }
 
+.threads {
+  isolation: isolate;
+}
+
 .draggableThread {
   position: absolute;
   top: 0;
